Fixed bug where the input text field font color is too dark, like... what was I thinking

--- a/src/component/styles/Post.css
+++ b/src/component/styles/Post.css
@@ -48,4 +48,5 @@
 #new-post {
     background-color: #4c555a;
     border-color: #1e2224;
+    color: #f3f3f8;
 }
